--- a/drivers/net/wireless/bcm4330/Makefile
+++ b/drivers/net/wireless/bcm4330/Makefile
@@ -26,7 +26,7 @@ EXTRA_CFLAGS += -DOKC_SUPPORT
 else
 ifdef CONFIG_TARGET_LOCALE_NA
 EXTRA_CFLAGS += -DRDWR_MACADDR
-EXTRA_CFLAGS += -DUSE_HIDDEN_SSID
+#EXTRA_CFLAGS += -DUSE_HIDDEN_SSID
 EXTRA_CFLAGS += -DUSE_NA_HOTSPOT
 else
 EXTRA_CFLAGS += -DWRITE_MACADDR
@@ -84,10 +84,10 @@ EXTRA_CFLAGS += -DUSE_INITIAL_2G_SCAN
 #MobileAP fw_reload
 EXTRA_CFLAGS += -DMOBILEAP_RELOAD
 
-ifeq ($(CONFIG_TARGET_LOCALE_NAATT),y)
+#ifeq ($(CONFIG_TARGET_LOCALE_NAATT),y)
 #Hidden SSID
-EXTRA_CFLAGS += -DUSE_HIDDEN_SSID
-endif
+#EXTRA_CFLAGS += -DUSE_HIDDEN_SSID
+#endif
 
 
 ###############################################################################################
