--- a/arch/arm/configs/c1_galaxys2_defconfig
+++ b/arch/arm/configs/c1_galaxys2_defconfig
@@ -38,7 +38,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="XCeLL-XV-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -134,12 +134,12 @@ CONFIG_PERF_COUNTERS=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
-# CONFIG_SLAB is not set
-CONFIG_SLUB=y
+CONFIG_SLAB=y
+# CONFIG_SLUB is not set
 # CONFIG_SLOB is not set
-CONFIG_PROFILING=y
-CONFIG_OPROFILE=y
-CONFIG_HAVE_OPROFILE=y
+# CONFIG_PROFILING is not set
+# CONFIG_OPROFILE is not set
+# CONFIG_HAVE_OPROFILE is not set 
 # CONFIG_KPROBES is not set
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -173,10 +173,10 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-# CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_CFQ is not set 
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -367,7 +367,7 @@ CONFIG_S5PV310_SETUP_MSHCI_GPIO=y
 CONFIG_S5PV310_SETUP_USB_PHY=y
 CONFIG_S5PV310_PM=y
 CONFIG_SAMSUNG_IRQ_GPIO=y
-CONFIG_S5PV310_SETUP_TVOUT=y
+# CONFIG_S5PV310_SETUP_TVOUT is not set
 # CONFIG_MACH_SMDKC210 is not set
 # CONFIG_MACH_SMDKV310 is not set
 CONFIG_MACH_C1=y
@@ -432,7 +432,7 @@ CONFIG_S5PV310_BUSFREQ=y
 #
 # CPUFreq step up sequence selection: 2 step or 3 step
 #
-CONFIG_FREQ_STEP_UP_L2_L0=y
+# CONFIG_FREQ_STEP_UP_L2_L0 is not set
 
 #
 # Processor Type
@@ -506,7 +506,7 @@ CONFIG_LOCAL_TIMERS=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
-CONFIG_HZ=200
+CONFIG_HZ=300
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 CONFIG_OABI_COMPAT=y
@@ -515,7 +515,7 @@ CONFIG_ARCH_SPARSEMEM_DEFAULT=y
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 CONFIG_ARCH_SKIP_SECONDARY_CALIBRATE=y
 CONFIG_HIGHMEM=y
-CONFIG_HW_PERF_EVENTS=y
+# CONFIG_HW_PERF_EVENTS is not set
 CONFIG_SELECT_MEMORY_MODEL=y
 # CONFIG_FLATMEM_MANUAL is not set
 # CONFIG_DISCONTIGMEM_MANUAL is not set
@@ -562,8 +562,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
@@ -1872,7 +1872,7 @@ CONFIG_USB_SUSPEND=y
 # CONFIG_USB_OTG is not set
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
-CONFIG_USB_SEC_WHITELIST=y
+# CONFIG_USB_SEC_WHITELIST is not set
 # CONFIG_HOST_COMPLIANT_TEST is not set
 # CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB is not set
